# gif_random

./: AUTHORS  ChangeLog  LICENSE  README  autogen.sh  configure.ac
src/: Makefile.am  gifrandom.c  gifrandom.h  gifseeker.c  gifseeker.h  gtk_interface.c  gtk_interface.h  main.c
